--- a/server/package.json
+++ b/server/package.json
@@ -2,24 +2,12 @@
   "name": "institute-backend",
   "version": "1.0.0",
   "description": "Backend for Institute for Behavior and Learning",
-  "main": "server.js",
+  "main": "server-simple.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server-simple.js",
+    "dev": "nodemon server-simple.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "express-rate-limit": "^6.8.1",
-    "express-validator": "^7.0.1",
-    "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.4",
-    "date-fns": "^2.30.0"
+    "express": "^4.18.2"
   }
 }
