--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "institute-backend",
+  "name": "institute-backend-secure",
   "version": "1.0.0",
-  "description": "Backend for Institute for Behavior and Learning",
-  "main": "server-simple.js",
+  "description": "Secure backend for Institute for Behavior and Learning",
+  "main": "server-secure.js",
   "scripts": {
-    "start": "node server-simple.js",
-    "dev": "nodemon server-simple.js"
+    "start": "node server-secure.js",
+    "dev": "nodemon server-secure.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1"
   }
 }
