--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,13 @@
-"name": "institute-backend-secure",
-"version": "1.0.0",
-"description": "Secure backend for Institute for Behavior and Learning",
-"main": "server-secure.js",
-"scripts": {
-  "start": "node server-secure.js",
-  "dev": "nodemon server-secure.js"
-},
-"dependencies": {
-  "express": "^4.18.2",
-  "mongoose": "^7.5.0",
-  "cors": "^2.8.5",
-  "helmet": "^7.0.0",
-  "morgan": "^1.10.0",
-  "dotenv": "^16.3.1"
+{
+  "name": "institute-backend-minimal",
+  "version": "1.0.0", 
+  "description": "Minimal backend for Institute for Behavior and Learning",
+  "main": "server-minimal.js",
+  "scripts": {
+    "start": "node server-minimal.js",
+    "dev": "nodemon server-minimal.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
