Rename package for ultra backend version

--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
+Copy
 {
-  "name": "institute-backend-minimal",
+  "name": "institute-backend-ultra",
   "version": "1.0.0",
-  "description": "Minimal backend for Institute for Behavior and Learning",
-  "main": "server-minimal.js",
+  "description": "Ultra-simple backend for Institute for Behavior and Learning",
+  "main": "server-ultra-simple.js",
   "scripts": {
-    "start": "node server-minimal.js",
-    "dev": "nodemon server-minimal.js"
+    "start": "node server-ultra-simple.js"
   },
   "dependencies": {
     "express": "^4.18.2"
