--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "institute-backend-ultra",
-  "version": "1.0.0",
-  "description": "Ultra-simple backend for Institute for Behavior and Learning",
-  "main": "server-ultra-simple.js",
+  "name": "institute-backend-working",
+  "version": "1.0.0", 
+  "description": "Working backend for Institute for Behavior and Learning",
+  "main": "server-working.js",
   "scripts": {
-    "start": "node server-ultra-simple.js"
+    "start": "node server-working.js"
   },
   "dependencies": {
     "express": "^4.18.2"
